force-app/main/default/objects/Project_Site_Visit__c/Project_Site_Visit__c.object-meta.xml
<CustomObject>
    <description>Information recorded during an agency site visit for a particular project.  Used for the corporate projects (not the calendar projects, see &quot;Calendar Intake&quot; for that).</description>
    <label>Project Site Visit</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Site Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>