force-app/main/default/objects/Project_Site_Visit__c/fields/Advance_Supply_Drop_off_del__c.field-meta.xml
<CustomField>
    <fullName>Advance_Supply_Drop_off_del__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can supplies by dropped off in advance?</inlineHelpText>
    <label>Advance Supply Drop-off</label>
    <type>Checkbox</type>
</CustomField>