force-app/main/default/objects/Project_Site_Visit__c/fields/Avg_Max_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Avg_Max_Volunteers__c</fullName>
    <formula>Sum_Max_Volunteers__c  /  Count_Max_Volunteers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Max Volunteers</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>