force-app/main/default/objects/Project_Site_Visit__c/fields/Avg_Min_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Avg_Min_Volunteers__c</fullName>
    <formula>Sum_Min_Volunteers__c /  Count_Min_Volunteers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Min Volunteers</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>