force-app/main/default/objects/Project_Site_Visit__c/fields/Count_Max_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Count_Max_Volunteers__c</fullName>
    <label>Count Max Volunteers</label>
    <summaryFilterItems>
        <field>Project_Task__c.Maximum_Volunteers__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Task__c.Project_Site_Visit__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>