force-app/main/default/objects/Project_Site_Visit__c/fields/Count_Min_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Count_Min_Volunteers__c</fullName>
    <inlineHelpText>Counts the number of rows where min volunteers is recorded, not the number of volunteers in any form.  This is used only to compute an average later.</inlineHelpText>
    <label>Count Min Volunteers</label>
    <summaryFilterItems>
        <field>Project_Task__c.Minimum_Volunteers__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Task__c.Project_Site_Visit__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>