force-app/main/default/objects/Project_Site_Visit__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>This description of the project will be used in the Volunteer Opportunity.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>