force-app/main/default/objects/Project_Site_Visit__c/fields/Disposal_Plan__c.field-meta.xml
<CustomField>
    <fullName>Disposal_Plan__c</fullName>
    <inlineHelpText>If pertinent to this project specify how waste will be disposed of.</inlineHelpText>
    <label>Disposal Plan</label>
    <type>TextArea</type>
</CustomField>