force-app/main/default/objects/Project_Site_Visit__c/fields/Dumpster_Location__c.field-meta.xml
<CustomField>
    <fullName>Dumpster_Location__c</fullName>
    <inlineHelpText>If a dumpster is pertinent to this project and available note its location.</inlineHelpText>
    <label>Dumpster Location</label>
    <length>200</length>
    <type>Text</type>
</CustomField>