force-app/main/default/objects/Project_Site_Visit__c/fields/Interference_Event__c.field-meta.xml
<CustomField>
    <fullName>Interference_Event__c</fullName>
    <inlineHelpText>Is there an event planned that could interfere with the anticipated project date(s)?</inlineHelpText>
    <label>Interference Event</label>
    <length>200</length>
    <type>Text</type>
</CustomField>