force-app/main/default/objects/Project_Site_Visit__c/fields/Lead_free_paint__c.field-meta.xml
<CustomField>
    <fullName>Lead_free_paint__c</fullName>
    <inlineHelpText>For painting projects, if scraping, is your building lead-free?</inlineHelpText>
    <label>Lead-free paint</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Don&apos;t Know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>