force-app/main/default/objects/Project_Site_Visit__c/fields/Light_Task_Options__c.field-meta.xml
<CustomField>
    <fullName>Light_Task_Options__c</fullName>
    <inlineHelpText>Are there lighter task options for those with disabilities or who are pregnant?  If any please specify.</inlineHelpText>
    <label>Light Task Options</label>
    <type>TextArea</type>
</CustomField>