force-app/main/default/objects/Project_Site_Visit__c/fields/Local_Impact_Area__c.field-meta.xml
<CustomField>
    <fullName>Local_Impact_Area__c</fullName>
    <inlineHelpText>used to populate Volunteer Opportunity field &quot;Impact Area (Local)&quot;.</inlineHelpText>
    <label>Local Impact Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Basic Needs</fullName>
            </value>
            <value>
                <fullName>Emergency Preparedness/DART</fullName>
            </value>
            <value>
                <fullName>Ensuring Young People Succeed</fullName>
            </value>
            <value>
                <fullName>Equipping Adults to Beat Poverty</fullName>
            </value>
            <value>
                <fullName>Health &amp; Wellness</fullName>
            </value>
            <value>
                <fullName>New Volunteer or Project Leader Training</fullName>
            </value>
            <value>
                <fullName>Boston Cares Programming &amp; Support</fullName>
            </value>
            <value>
                <fullName>Cultural &amp; Environmental Vibrancy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>