force-app/main/default/objects/Project_Site_Visit__c/fields/Max_Min_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Max_Min_Volunteers__c</fullName>
    <inlineHelpText>The largest minimum volunteers for any task.  If tasks will be sequential this will be the project minimum needed.</inlineHelpText>
    <label>Max Min Volunteers</label>
    <summarizedField>Project_Task__c.Minimum_Volunteers__c</summarizedField>
    <summaryForeignKey>Project_Task__c.Project_Site_Visit__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>