force-app/main/default/objects/Project_Site_Visit__c/fields/Min_Max_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Min_Max_Volunteers__c</fullName>
    <label>Min Max Volunteers</label>
    <summarizedField>Project_Task__c.Maximum_Volunteers__c</summarizedField>
    <summaryForeignKey>Project_Task__c.Project_Site_Visit__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>