force-app/main/default/objects/Project_Site_Visit__c/fields/Min_Volunteer_Age_w_adult__c.field-meta.xml
<CustomField>
    <fullName>Min_Volunteer_Age_w_adult__c</fullName>
    <label>Min Volunteer Age (w/adult)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>