force-app/main/default/objects/Project_Site_Visit__c/fields/Minimum_Volunteer_Age__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Volunteer_Age__c</fullName>
    <label>Minimum Volunteer Age</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>