force-app/main/default/objects/Project_Site_Visit__c/fields/Nonprofit_Agency__c.field-meta.xml
<CustomField>
    <fullName>Nonprofit_Agency__c</fullName>
    <description>This will be pre-filled when launched from that Organization&apos;s page</description>
    <label>Nonprofit Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Site_Visit_Forms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>