force-app/main/default/objects/Project_Site_Visit__c/fields/Pending_work_orders__c.field-meta.xml
<CustomField>
    <fullName>Pending_work_orders__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are there pending work orders or is there a chance any requested work will be completed prior to project date?</inlineHelpText>
    <label>Pending work orders</label>
    <type>Checkbox</type>
</CustomField>