force-app/main/default/objects/Project_Site_Visit__c/fields/Primary_Contact_Present__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will primary contact be present on project date?</inlineHelpText>
    <label>Primary Contact Present</label>
    <type>Checkbox</type>
</CustomField>