force-app/main/default/objects/Project_Site_Visit__c/fields/Project_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Date__c</fullName>
    <inlineHelpText>Planned upon date for the project to occur</inlineHelpText>
    <label>Project Date</label>
    <type>Date</type>
</CustomField>