force-app/main/default/objects/Project_Site_Visit__c/fields/Project_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_End_Date__c</fullName>
    <inlineHelpText>Provide a value if this is a mutl-day project.</inlineHelpText>
    <label>Project End Date</label>
    <type>Date</type>
</CustomField>