force-app/main/default/objects/Project_Site_Visit__c/fields/Project_Location__c.field-meta.xml
<CustomField>
    <fullName>Project_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Required to generate the Volunteer Opportunity.</inlineHelpText>
    <label>Project Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>HOC__Location__c.HOC__Organization__c</field>
            <operation>equals</operation>
            <valueField>$Source.Nonprofit_Agency__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>HOC__Location__c</referenceTo>
    <relationshipLabel>Project Site Visits</relationshipLabel>
    <relationshipName>Project_Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>