force-app/main/default/objects/Project_Site_Visit__c/fields/Sum_Min_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Sum_Min_Volunteers__c</fullName>
    <inlineHelpText>If project tasks will be concurrent this will be the minimum number required for the project.</inlineHelpText>
    <label>Sum Min Volunteers</label>
    <summarizedField>Project_Task__c.Minimum_Volunteers__c</summarizedField>
    <summaryForeignKey>Project_Task__c.Project_Site_Visit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>