force-app/main/default/objects/Project_Site_Visit__c/fields/Supply_storage__c.field-meta.xml
<CustomField>
    <fullName>Supply_storage__c</fullName>
    <inlineHelpText>Where can advance supplies be securely stored after drop-off?</inlineHelpText>
    <label>Supply storage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>